--- a/app/views/form.erb
+++ b/app/views/form.erb
@@ -7,14 +7,14 @@
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label"></label>
             <div class="col-sm-7">
-                <input type="email" name="email" class="form-control" id="inputEmail3" placeholder="Email">
+                <input type="email" name="email" class="form-control" id="inputEmail3" value="example2@example.com">
             </div>
         </div>
         <!-- PASSWORD INPUT -->
         <div class="form-group">
             <label for="inputPassword3" class="col-sm-2 control-label"></label>
             <div class="col-sm-7">
-                <input type="password" name="password" class="form-control" id="inputPassword3" placeholder="Password">
+                <input type="password" name="password" class="form-control" id="inputPassword3" value="password">
             </div>
         </div>
         <!-- SUBMIT BUTTON -->
@@ -25,5 +25,7 @@
         </div>
     </form>
 </div>
+
+
 
 
